# lbc

./: .gitignore  Cargo.toml  README.md  userstory.md
.github/workflows/: ci.yaml  release.yaml  rust.yml
docs/: ai_catalog.yaml
lbc_catalog/: Cargo.toml  Trunk.toml  index.html  theme.css
lbc_catalog/src/: columns_example_page.rs  container_example_page.rs  footer_example_page.rs  hero_example_page.rs  level_example_page.rs  main.rs  media_example_page.rs  section_example_page.rs  tile_example_page.rs
lbc_catalog/src/components/: accordion_example_page.rs  breadcrumb_example_page.rs  buttons_example_page.rs  calendar_example_page.rs  card_example_page.rs  dropdown_example_page.rs  menu_example_page.rs  message_example_page.rs  mod.rs  modal_example_page.rs  navbar_example_page.rs  pagination_example_page.rs  panel_example_page.rs  tabs_example_page.rs
lbc_catalog/src/elements/: block_example_page.rs  box_example_page.rs  button_example_page.rs  colors_example_page.rs  content_example_page.rs  delete_example_page.rs  icon_example_page.rs  mod.rs  notification_example_page.rs  progress_example_page.rs  sizes_example_page.rs  table_example_page.rs  tag_example_page.rs  title_example_page.rs
lbc_catalog/src/form/: form_autocomplete_example_page.rs  form_control_example_page.rs  form_example_page.rs  form_field_example_page.rs  form_file_example_page.rs  form_input_example_page.rs  form_radio_example_page.rs  form_select_example_page.rs  form_text_area_example_page.rs  mod.rs
src/: lib.rs  util.rs
src/components/: accordion.rs  breadcrumb.rs  calendar.rs  card.rs  dropdown.rs  menu.rs  message.rs  mod.rs  modal.rs  navbar.rs  pagination.rs  panel.rs  tabs.rs
src/elements/: block.rs  box.rs  button.rs  buttons.rs  content.rs  delete.rs  icon.rs  image.rs  list.rs  mod.rs  notification.rs  progress.rs  table.rs  tag.rs  tags.rs  title.rs
src/form/: autocomplete.rs  checkbox.rs  control.rs  field.rs  file.rs  input.rs  mod.rs  radio.rs  select.rs  textarea.rs
src/layout/: columns.rs  container.rs  footer.rs  hero.rs  level.rs  media.rs  mod.rs  section.rs  tile.rs
