[package]
name = "lbc"
version = "0.1.0"
edition = "2024"
description = "A Leptos component library based on the Bulma CSS framework."
authors = ["Konstantin Pupkov <konstantin.pupkov@fromkos.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lbc"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "leptos"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.12", features = ["csr", "ssr"] }
wasm-bindgen = "0.2.105"

[dev-dependencies]
leptos = { version = "0.8.12", features = ["ssr"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
