[package]
name = "lbc"
version = "0.1.5"
edition = "2024"
description = "A Leptos component library based on the Bulma CSS framework."
authors = ["Konstantin Pupkov <konstantin.pupkov@fromkos.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lbc"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "leptos"]

[features]
default = []
# Enable library debug logging (uses `leptos::logging::log!`).
# Disabled by default to avoid noisy console output in production.
logging = []

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = { version = "=0.8.14", features = ["csr", "ssr"] }
wasm-bindgen = "=0.2.106"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Event",
  "EventTarget",
  "HtmlInputElement",
] }

[dev-dependencies]
leptos = { version = "=0.8.14", features = ["ssr"] }
wasm-bindgen-test = "=0.3.56"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
